language/move-lang/tests/move_check/expansion/use_function_unbound.exp
error: 

   ┌── tests/move_check/expansion/use_function_unbound.move:6:17 ───
   │
 6 │     use 0x1::X::u;
   │                 ^ Invalid 'use'. Unbound member 'u' in module '0x1::X'
   ·
 2 │ module X {
   │        - Module '0x1::X' declared here
   │

error: 

   ┌── tests/move_check/expansion/use_function_unbound.move:9:9 ───
   │
 9 │         u()
   │         ^ Unbound function 'u' in current scope
   │

